<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>boyu.ssp</groupId>
    <artifactId>ssp-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>SSP Parent</name>
    <description>SSP System Parent Project</description>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.4.8</spring-boot.version>
        <jjwt.version>0.13.0</jjwt.version>
        <caffeine.version>3.1.8</caffeine.version>
        <guava.version>33.5.0-jre</guava.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <mybatis-plus.version>3.5.10</mybatis-plus.version>
        <mybatis-spring.version>3.0.3</mybatis-spring.version>
        <druid.version>1.2.20</druid.version>
    </properties>

    <modules>
        <module>ssp-cache</module>
        <module>ssp-common</module>
        <module>ssp-common-model</module>
        <module>ssp-be</module>
    </modules>

    <dependencyManagement>
        <dependencies>
        </dependencies>
            
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>